--- a/python-workers-examples/04-query-d1/pyproject.toml
+++ b/python-workers-examples/04-query-d1/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "python-d1"
 version = "0.1.0"
-description = "Python d1 example"
+description = "Python d1"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -12,3 +12,4 @@ dependencies = [
 dev = [
     "workers-py"
 ]
+
